--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "name": "buildbelt",
   "description": "Modern JavaScript development toolchain",
   "keywords": [
-    "chai",
     "eslint",
-    "mocha",
     "prettier",
     "typescript"
   ],
@@ -25,26 +23,29 @@
     "prepublishOnly": "npm test",
     "test": "npm run lint:eslint:check"
   },
-  "dependencies": {
-    "@eslint/js": "^9.5.0",
-    "@types/chai": "^4.3.16",
+  "devDependencies": {
+    "@eslint/js": "^9.6.0",
     "@types/eslint__js": "^8.42.3",
-    "@types/mocha": "^10.0.7",
-    "@types/node": "^20.14.8",
-    "@typescript-eslint/eslint-plugin": "^7.14.1",
-    "@typescript-eslint/parser": "^7.14.1",
-    "chai": "^4.3.7",
-    "chai-as-promised": "^7.1.1",
+    "@types/node": "^20.14.9",
+    "@typescript-eslint/eslint-plugin": "^7.15.0",
+    "@typescript-eslint/parser": "^7.15.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "mocha": "^10.2.0",
-    "mocha-bootstrap": "^1.0.4",
     "prettier": "^3.3.2",
-    "sinon": "^17.0.1",
-    "sinon-chai": "^3.7.0",
-    "ts-mocha": "^10.0.0",
-    "ts-sinon": "^2.0.2",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^7.15.0"
+  },
+  "peerDependencies": {
+    "@eslint/js": "^9.5.0",
+    "@types/eslint__js": "^8.42.3",
+    "@types/node": "^20.14.8",
+    "@typescript-eslint/eslint-plugin": "^7.14.1",
+    "@typescript-eslint/parser": "^7.14.1",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.3.2",
     "typescript": "^5.5.2",
     "typescript-eslint": "^7.14.1"
   },
