--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "Dan Phillimore <dan@ovms.co> (https://github.com/asmblah)",
   "repository": {
     "type": "git",
-    "url": "https://github.com/asmblah/buildbelt"
+    "url": "git+https://github.com/asmblah/buildbelt.git"
   },
   "bugs": {
     "email": "dan@ovms.co",
