--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,5 +22,8 @@ jobs:
       - name: Install NPM dependencies
         run: npm ci
 
+      - name: Install Playwright browser(s)
+        run: node_modules/.bin/playwright install --with-deps firefox
+
       - name: Run tests
         run: npm test
