--- a/package.json
+++ b/package.json
@@ -17,27 +17,23 @@
     "email": "dan@ovms.co",
     "url": "https://github.com/asmblah/buildbelt/issues"
   },
+  "main": "dist/buildbelt.mjs",
+  "types": "dist/buildbelt.d.ts",
   "scripts": {
-    "lint:eslint:check": "eslint './**/{*.js,*.mjs}' --max-warnings=0",
-    "lint:eslint:fix": "eslint './**/{*.js,*.mjs}' --fix",
-    "prepublishOnly": "npm test",
-    "test": "npm run lint:eslint:check"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.6.0",
-    "@types/eslint__js": "^8.42.3",
-    "@types/node": "^20.14.9",
-    "@typescript-eslint/eslint-plugin": "^7.15.0",
-    "@typescript-eslint/parser": "^7.15.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "^3.3.2",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^7.15.0"
+    "build:prod": "vite build",
+    "build:dev": "vite build --mode=development",
+    "build:clean": "rm -rf dist/*",
+    "lint:eslint:check": "eslint '{src,test}/**/*.{ts,tsx}' '*.{js,jsx,mjs,mts,ts,tsx}' --max-warnings=0",
+    "lint:eslint:fix": "eslint '{src,test}/**/*.{ts,tsx}' '*.{js,jsx,mjs,mts,ts,tsx}' --fix",
+    "lint:tsc:check": "tsc --noEmit",
+    "prepublishOnly": "npm test && npm run build:clean && npm run build:prod",
+    "test": "npm run lint:eslint:check && npm run lint:tsc:check && npm run build:dev && npm run vitest:ci",
+    "vitest:ci": "vitest run",
+    "vitest:watch": "vitest watch"
   },
   "peerDependencies": {
     "@eslint/js": "^9.5.0",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/eslint__js": "^8.42.3",
     "@types/node": "^20.14.8",
     "@typescript-eslint/eslint-plugin": "^7.14.1",
@@ -46,8 +42,15 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.3.2",
+    "terser": "^5.31.1",
     "typescript": "^5.5.2",
-    "typescript-eslint": "^7.14.1"
+    "typescript-eslint": "^7.14.1",
+    "vite": "^5.3.3",
+    "vitest": "^1.6.0"
+  },
+  "devDependencies": {
+    "@vitest/browser": "^1.6.0",
+    "playwright": "^1.45.1"
   },
   "engines": {
     "node": ">=8"
