--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,16 @@
 {
     "compilerOptions": {
         "declaration": true,
-        "module": "commonjs",
+        "declarationMap": true,
+        "inlineSources": true,
+        "isolatedModules": true,
+        "lib": ["dom", "esnext"],
+        "module": "esnext",
         "moduleResolution": "node",
+        "outDir": "dist/",
         "sourceMap": true,
         "strict": true,
-        "target": "es5"
-    }
+        "target": "esnext"
+    },
+    "include": ["src/"]
 }
