--- a/package.json
+++ b/package.json
@@ -32,25 +32,35 @@
     "vitest:watch": "vitest watch"
   },
   "peerDependencies": {
-    "@eslint/js": "^9.5.0",
+    "@eslint/js": "^9.24.0",
     "@rollup/plugin-typescript": "^11.1.6",
-    "@types/eslint__js": "^8.42.3",
-    "@types/node": "^20.14.8",
-    "@typescript-eslint/eslint-plugin": "^7.14.1",
-    "@typescript-eslint/parser": "^7.14.1",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "^3.3.2",
-    "terser": "^5.31.1",
-    "typescript": "^5.5.2",
-    "typescript-eslint": "^7.14.1",
-    "vite": "^5.3.3",
-    "vitest": "^1.6.0"
+    "@types/node": "^22.14.1",
+    "@typescript-eslint/eslint-plugin": "^8.30.1",
+    "@typescript-eslint/parser": "^8.30.1",
+    "eslint": "^9.24.0",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-prettier": "^5.2.6",
+    "prettier": "^3.5.3",
+    "terser": "^5.39.0",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.30.1",
+    "vite": "^6.3.1",
+    "vitest": "^3.1.1"
   },
   "devDependencies": {
-    "@vitest/browser": "^1.6.0",
-    "playwright": "^1.45.1"
+    "@eslint/js": "^9.24.0",
+    "@types/node": "^22.14.1",
+    "@typescript-eslint/eslint-plugin": "^8.30.1",
+    "@typescript-eslint/parser": "^8.30.1",
+    "@vitest/browser": "^3.1.1",
+    "eslint": "^9.24.0",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-prettier": "^5.2.6",
+    "playwright": "^1.52.0",
+    "prettier": "^3.5.3",
+    "terser": "^5.39.0",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.30.1"
   },
   "engines": {
     "node": ">=8"
